<resources>
    <string name="app_name">iniNews</string>
    <string name="title">Title</string>
    <string name="author">author</string>
    <string name="date">date</string>
    <string name="description">description</string>
    <string name="top_news">Top News</string>
    <string name="indonesia_news_today">Indonesia News Today</string>
    <string name="about">about apps</string>
    <string name="efrizalnf">@efrizalnf</string>
    <string name="email">ondabuzz9@gmail.com</string>
    <string name="email_name">Email</string>
    <string name="username">Username</string>
    <string name="name_me">Efrizal NurulFajri</string>
    <string name="name">Name</string>
    <string name="news">News</string>
    <string name="favourite">Favourite</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>