<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_about"
        android:layout_width="match_parent"
        android:layout_height="220dp"
        android:layout_margin="@dimen/margin_16"
        android:src="@drawable/efrizalnf"
        android:scaleType="centerCrop"
        app:civ_circle_background_color="@color/colorPrimary"
        app:civ_border_width="5dp"
        app:civ_border_overlay="true"
        app:civ_border_color="@color/colorThird"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_16"
        app:layout_constraintTop_toBottomOf="@+id/iv_about"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:elevation="5dp"
        android:padding="@dimen/margin_16"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_margin="@dimen/margin_16"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:text="@string/name"/>
            <TextView
                android:id="@+id/tv_name_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/name_me"/>

            <TextView
                android:layout_marginTop="@dimen/margin_12"
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:text="@string/username"/>
            <TextView
                android:id="@+id/tv_username_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/efrizalnf"/>

            <TextView
                android:layout_marginTop="@dimen/margin_12"
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textSize="16sp"
                android:text="@string/email_name"/>
            <TextView
                android:id="@+id/tv_email_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:textSize="16sp"
                android:text="@string/email"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>