<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_item_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_item_vertical"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:id="@+id/ll_textview_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_title_news_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="sans-serif-black"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/title"
                    android:textAllCaps="true"
                    android:textSize="14sp"
                    android:tooltipText="@string/app_name" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_author_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/author"
                        android:textSize="11sp"
                        android:tooltipText="@string/app_name" />

                    <TextView
                        android:id="@+id/tv_date_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginLeft="5dp"
                        android:text="@string/date"
                        android:textFontWeight="1"
                        android:textSize="11sp"
                        android:tooltipText="@string/app_name" />
                </LinearLayout>

                <TextView
                    android:id="@+id/tv_desc_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:elegantTextHeight="true"
                    android:maxLines="2"
                    android:ellipsize="end"
                    android:text="@string/description"
                    android:textSize="14sp"
                    android:tooltipText="@string/app_name" />

            </LinearLayout>
            <ImageView
                android:id="@+id/vfavbutton"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:layout_gravity="right|bottom"
                android:src="@drawable/ic_unfavourite"
                android:outlineSpotShadowColor="@color/black"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>