<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgCover"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        android:src="@drawable/selection_band_overlay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cover"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="210dp"
        android:layout_marginEnd="10dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="50dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:gravity="center_horizontal"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="28sp" />


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/llrv_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_cover"
        >
        <TextView
            android:id="@+id/tv_topnews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_news"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="@dimen/margin_12"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/margin_12"
            android:paddingRight="@dimen/margin_12"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llrv_horizontal"
        >
        <TextView
            android:id="@+id/tv_indonews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indonesia_news_today"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="@dimen/margin_12"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/margin_12"
            android:paddingRight="@dimen/margin_12"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>